# DigitInterface.py

./: MANIFEST.in  README.md  pyproject.toml  setup.py
digit_interface/: __init___.py  low_level_api.cpp  low_level_api.pyx  low_level_api.pyxbld  utils.py
digit_interface/cpp/: CMakeLists.txt  low_level_connection_class.cpp  low_level_connection_class.hpp  lowlevelapi.c
digit_interface/cpp/libartl/: artl.c  artl_internal.c
example/: step_sim.py  test_controller.py
